Update about.html - #9.

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="images/logo-ico.png">
 
-    <title>Drooids - Enjoyable Developmnt</title>
+    <title>Drooids - Enjoyable Development</title>
 
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/animate.css">
@@ -46,7 +46,7 @@
       <div class="sk-cube sk-cube9"></div>
     </div>
 
-    <div id="index" class="index">
+    <div id="about" class="about">
         <!-- Navigation -->
         <nav class="navbar navbar-inverse navbar-shrink">
             <div class="container">
@@ -88,8 +88,9 @@
             <div class="container">
                 <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-12 pull-left text-left">
-                    <div class="hero-headline"> <h1 class="animated fadeIn">We're currently building this site, Comming soon...!</h1>
-                    <!-- a href="/about.html" class="hbtn outline-btn large">About Us<span class="light-caret-right"></span></a -->
+                    <div class="hero-headline"> <p class="animated fadeIn">We are a compact but really efficient team of Engineers and Artists, whose aim is to make our Cliets Happy and the Software Development Fun and Enjoyable.<br>
+                    We have worked on many interesting and fun projects and built custom solutions for our clients and comunity since 2013.</p>
+
                     </div>
                 </div>
                     <div class="col-lg-6 col-md-6 col-sm-12">
@@ -103,118 +104,115 @@
             </div>
         </header>
 
-        <div id="portfolio">
-            <div class="wrapper-with-margin sub dark-blue" style="padding:0;">
-                <div id="owl-demo" class="owl-carousel owl-theme">
-
-                    <div class="item-carousel">
-                        <div class="container row transparent">
-                            <div class="col-lg-12 row">
-                                <div class="col-lg-3 case-study">
-                                  <h1 style="font-size:26px;">
-                                    <span class="case-study">Case Study</span>
-                                    Yachting's Best
-                                  </h1>
-                                  </div>
-                                  <div class="col-lg-7">
-                                      <p style="font-size:16px;">
-                                        Your <strong>Guide</strong> to the best boating spots. An online Cruising guide... That works on any device.
-                                        <!-- br><a href="/portfolio/score-revolution">View case study →</a -->
-                                      </p>
-                                  </div>
-                            </div>
-                          </div>
-                        <img src="images/clients/client-3.png" alt="">
-                            <!-- a href="/blog/tao-of-hashicorp.html" class="cont-read">More about us<span class="light-caret-right small"></span></a -->
-                    </div>
-
-                    <div class="item-carousel">
-                        <div class="container row transparent">
-                            <div class="col-lg-12 row">
-                                <div class="col-lg-3 case-study">
-                                  <h1 style="font-size:26px;">
-                                    <span class="case-study">Case Study</span>
-                                    Mymxlog
-                                  </h1>
-                                  </div>
-                                  <div class="col-lg-7">
-                                      <p style="font-size:16px;">
-                                        Your <strong>toolbox</strong> to manage your recent experience records and produce detailed reports with ease. All i.a.w EASA Part-145 & 66 regulations.
-                                        <!-- br><a href="/portfolio/score-revolution">View case study →</a -->
-                                      </p>
-                                  </div>
-                            </div>
-                          </div>
-                        <img src="images/clients/client-1.png" alt="">
-                            <!-- a href="/blog/tao-of-hashicorp.html" class="cont-read">More about us<span class="light-caret-right small"></span></a -->
-                    </div>
-
-                    <div class="item-carousel">
-                        <div class="container row transparent">
-                            <div class="col-lg-12 row">
-                                <div class="col-lg-3 case-study">
-                                  <h1 style="font-size:26px;">
-                                    <span class="case-study">Case Study</span>
-                                    Skyhook - www
-                                  </h1>
-                                  </div>
-                                  <div class="col-lg-7">
-                                      <p style="font-size:16px;">
-                                        Your <strong>toolbox</strong> to manage your recent experience records and produce detailed reports with ease. All i.a.w EASA Part-145 & 66 regulations.
-                                        <!-- br><a href="/portfolio/score-revolution">View case study →</a -->
-                                      </p>
-                                  </div>
-                            </div>
-                          </div>
-                        <img src="images/clients/client-2.png" alt="">
-                            <!-- a href="/blog/tao-of-hashicorp.html" class="cont-read">More about us<span class="light-caret-right small"></span></a -->
-                    </div>
-
-                    <div class="item-carousel">
-                        <div class="container row transparent">
-                            <div class="col-lg-12 row">
-                                <div class="col-lg-3 case-study">
-                                  <h1 style="font-size:26px;">
-                                    <span class="case-study">Case Study</span>
-                                    MailTree
-                                  </h1>
-                                  </div>
-                                  <div class="col-lg-7">
-                                      <p style="font-size:16px;">
-                                        <strong>Mail</strong> Forwarder that bases on mail subject keywords.
-                                        <!-- br><a href="/portfolio/score-revolution">View case study →</a -->
-                                      </p>
-                                  </div>
-                            </div>
-                          </div>
-                        <img src="images/clients/client-4.png" alt="">
-                            <!-- a href="/blog/tao-of-hashicorp.html" class="cont-read">More about us<span class="light-caret-right small"></span></a -->
-                    </div>
-
-                    <div class="item-carousel">
-                        <div class="container row transparent">
-                            <div class="col-lg-12 row">
-                                <div class="col-lg-3 case-study">
-                                  <h1 style="font-size:26px;">
-                                    <span class="case-study">Case Study</span>
-                                    Frimann
-                                  </h1>
-                                  </div>
-                                  <div class="col-lg-7">
-                                      <p style="font-size:16px;">
-                                        The <strong>Most</strong> used Renting system in Iceland.
-                                        <!-- br><a href="/portfolio/score-revolution">View case study →</a -->
-                                      </p>
-                                  </div>
-                            </div>
-                          </div>
-                        <img src="images/clients/client-5.png" alt="">
-                            <!-- a href="/blog/tao-of-hashicorp.html" class="cont-read">More about us<span class="light-caret-right small"></span></a -->
-                    </div>
-
-                </div>
+        <!-- About -->
+        <section style="padding:20px 0px;">
+            <div class="container" style="text-align:center;">
+                <h1>The Team</h1>
             </div>
-        </div>
+        </section>
+        <section>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2 centered">
+                        <div class="col-lg-4">
+                            <img src="https://cloud.githubusercontent.com/assets/5823644/11061857/e36d1066-87a1-11e5-92b7-8480be35a0af.jpg" class="profile-picture">
+                        </div>
+                        <div class="col-lg-8 profile-overview">
+                            <h3>Besnik Selimi</h3>
+                            <h3>Advisor</h3>
+                            <h5>Docent në UEJL</h5>
+                            <h5>Computer Software</h5>
+
+                                <table class="table">
+                                    <tr>
+                                        <th>Current</td>
+                                        <td>SEE University</td>
+                                    </tr>
+                                    <tr>
+                                        <th>Previous</td>
+                                        <td>Universiteti i Evropës Juglindore, SEE University, Laboratoire d'Informatique de Grenoble</td>
+                                    </tr>
+                                    <tr>
+                                        <th>Education</td>
+                                        <td>Université Joseph Fourier (Grenoble I)</td>
+                                    </tr>
+                                    <tr>
+                                        <th>Websites</td>
+                                        <td>Personal Website, Company Website</td>
+                                    </tr>
+                                </table>
+                        </div>
+
+                    </div><!-- /col-lg-8 -->
+                </div><!-- /row -->
+            </div> <!-- /container -->
+        </section>
+
+        <section>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2 centered">
+                        <div class="col-lg-4">
+                            <img src="https://cloud.githubusercontent.com/assets/5823644/11061878/0fc0a48e-87a2-11e5-8009-334c4aa3b822.jpg" class="profile-picture">
+                        </div>
+                        <div class="col-lg-8 profile-overview">
+                            <h3>Mexhid Ferati</h3>
+                            <h3>Advisor</h3>
+                            <h5>Postdoctoral Fellow at Oslo and Akershus </h5>
+                            <h5>University College of Applied Sciences</h5>
+
+                                <table class="table">
+                                    <tr>
+                                        <th>Current</td>
+                                        <td>Oslo and Akershus University College of Applied Sciences, South East European University</td>
+                                    </tr>
+                                    <tr>
+                                        <th>Previous</td>
+                                        <td>Indiana University, a3m Computers, KFOR, US Military, Camp Bondsteel - Kosovo</td>
+                                    </tr>
+                                    <tr>
+                                        <th>Education</td>
+                                        <td>Indiana University</td>
+                                    </tr>
+                                    <tr>
+                                        <th>Websites</td>
+                                        <td>Personal Website, Company Website</td>
+                                    </tr>
+                                </table>
+                        </div>
+
+                    </div><!-- /col-lg-8 -->
+                </div><!-- /row -->
+            </div> <!-- /container -->
+        </section>
+
+        <section>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2 centered">
+                        <div class="col-lg-4">
+                            <img src="http://skyhook.is/images/Dren.png" class="profile-picture">
+                        </div>
+                        <div class="col-lg-6 profile-overview">
+                            <h3>Dren Kajmakci</h3>
+                            <h3>Developer</h3>
+
+                                <table class="table">
+                                    <tr>
+                                        <th>Education</td>
+                                        <td>SEE University</td>
+                                    </tr>
+                                    <tr>
+                                        <th>Websites</td>
+                                        <td>Personal Website, Company Website</td>
+                                    </tr>
+                                </table>
+                        </div>
+
+                    </div><!-- /col-lg-8 -->
+                </div><!-- /row -->
+            </div> <!-- /container -->
+        </section>
 
         <!-- Contact Section -->
         <section id="contact">
@@ -347,7 +345,7 @@
     <script type="text/javascript">
     window.onload = function(e) {
         setTimeout(function() {
-            document.getElementById('index').style.display = "block";
+            document.getElementById('about').style.display = "block";
             document.getElementById('loader').style.display = "none";
         }, 2000);
     }
