fix: upwork link change image on hover - #7.

--- a/index.html
+++ b/index.html
@@ -409,26 +409,26 @@
                         <div class="footer-col col-md-4">
                             <h3>Around the Web</h3>
                             <ul class="list-inline">
-                                <li>
+                                <!-- <li>
                                     <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
-                                </li>
+                                </li> -->
                                 <li>
                                     <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
                                 </li>
-                                <li>
+                                <!-- <li>
                                     <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
-                                </li>
+                                </li> -->
                                 <li>
                                     <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
                                 </li>
-                                <li>
+                                <!-- <li>
                                     <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-dribbble"></i></a>
-                                </li>
+                                </li> -->
                                  <li>
                                     <a href="https://github.com/Drooids" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
                                 </li>
                                   <li>
-                                    <a href="https://www.upwork.com/o/profiles/users/_~019f4294245c04f921/" class="btn-social btn-outline"><img src="images/icon-upwork.png" /></a>
+                                    <a href="https://www.upwork.com/o/profiles/users/_~019f4294245c04f921/" class="btn-social btn-outline up"><img class="image_on" src="images/icon-upwork.png" /><img class="image_off" src="images/icon-upwork-hover.png" /></a>
                                 </li>
                             </ul>
                         </div>
