--- a/about.html
+++ b/about.html
@@ -29,8 +29,6 @@
     <![endif]-->
 </head>
 
-
-
 <body id="page-top">
 
     <div id="loader" class="sk-cube-grid">
@@ -46,7 +44,7 @@
       <div class="sk-cube sk-cube9"></div>
     </div>
 
-    <div id="about" class="about">
+    <div style="display:none;" id="index" class="about">
         <!-- Navigation -->
         <nav class="navbar navbar-inverse navbar-shrink">
             <div class="container">
@@ -70,12 +68,9 @@
                         <li class="page-scroll">
                             <a href="index.html" class="black animated fadeIn">Home</a>
                         </li>
-                        <!-- li class="page-scroll">
-                            <a href="#about" class="black">About</a>
-                        </li>
                         <li class="page-scroll">
-                            <a href="#contact" class="black">Contact</a>
-                        </li -->
+                            <a href="index.html?scrollTo=id_contact" class="black">Contact</a>
+                        </li>
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
@@ -105,171 +100,121 @@
         </header>
 
         <!-- About -->
-        <section style="padding:20px 0px;">
-            <div class="container" style="text-align:center;">
-                <h1>The Team</h1>
-            </div>
-        </section>
-        <section>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2 centered">
-                        <div class="col-lg-4">
-                            <img src="https://cloud.githubusercontent.com/assets/5823644/11061857/e36d1066-87a1-11e5-92b7-8480be35a0af.jpg" class="profile-picture">
-                        </div>
-                        <div class="col-lg-8 profile-overview">
-                            <h3>Besnik Selimi</h3>
-                            <h3>Advisor</h3>
-                            <h5>Docent në UEJL</h5>
-                            <h5>Computer Software</h5>
-
-                                <table class="table">
-                                    <tr>
-                                        <th>Current</td>
-                                        <td>SEE University</td>
-                                    </tr>
-                                    <tr>
-                                        <th>Previous</td>
-                                        <td>Universiteti i Evropës Juglindore, SEE University, Laboratoire d'Informatique de Grenoble</td>
-                                    </tr>
-                                    <tr>
-                                        <th>Education</td>
-                                        <td>Université Joseph Fourier (Grenoble I)</td>
-                                    </tr>
-                                    <tr>
-                                        <th>Websites</td>
-                                        <td>Personal Website, Company Website</td>
-                                    </tr>
-                                </table>
-                        </div>
-
-                    </div><!-- /col-lg-8 -->
-                </div><!-- /row -->
-            </div> <!-- /container -->
-        </section>
-
-        <section>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2 centered">
-                        <div class="col-lg-4">
-                            <img src="https://cloud.githubusercontent.com/assets/5823644/11061878/0fc0a48e-87a2-11e5-8009-334c4aa3b822.jpg" class="profile-picture">
-                        </div>
-                        <div class="col-lg-8 profile-overview">
-                            <h3>Mexhid Ferati</h3>
-                            <h3>Advisor</h3>
-                            <h5>Postdoctoral Fellow at Oslo and Akershus </h5>
-                            <h5>University College of Applied Sciences</h5>
-
-                                <table class="table">
-                                    <tr>
-                                        <th>Current</td>
-                                        <td>Oslo and Akershus University College of Applied Sciences, South East European University</td>
-                                    </tr>
-                                    <tr>
-                                        <th>Previous</td>
-                                        <td>Indiana University, a3m Computers, KFOR, US Military, Camp Bondsteel - Kosovo</td>
-                                    </tr>
-                                    <tr>
-                                        <th>Education</td>
-                                        <td>Indiana University</td>
-                                    </tr>
-                                    <tr>
-                                        <th>Websites</td>
-                                        <td>Personal Website, Company Website</td>
-                                    </tr>
-                                </table>
-                        </div>
-
-                    </div><!-- /col-lg-8 -->
-                </div><!-- /row -->
-            </div> <!-- /container -->
-        </section>
-
-        <section>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2 centered">
-                        <div class="col-lg-4">
-                            <img src="http://skyhook.is/images/Dren.png" class="profile-picture">
-                        </div>
-                        <div class="col-lg-6 profile-overview">
-                            <h3>Dren Kajmakci</h3>
-                            <h3>Developer</h3>
-
-                                <table class="table">
-                                    <tr>
-                                        <th>Education</td>
-                                        <td>SEE University</td>
-                                    </tr>
-                                    <tr>
-                                        <th>Websites</td>
-                                        <td>Personal Website, Company Website</td>
-                                    </tr>
-                                </table>
-                        </div>
-
-                    </div><!-- /col-lg-8 -->
-                </div><!-- /row -->
-            </div> <!-- /container -->
-        </section>
-
-        <!-- Contact Section -->
-        <section id="contact">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12 text-center">
-                        <h2>Contact Us</h2>
-                        <hr class="star-primary">
-                    </div>
+        <div class="col-sm-12">
+            <section style="padding:20px 0px;">
+                <div class="container" style="text-align:center;">
+                    <h1>The Team</h1>
                 </div>
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
-                        <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-                        <form name="sentMessage" id="contactForm" novalidate>
-                            <div class="row control-group">
-                                <div class="form-group col-xs-12 floating-label-form-group controls">
-                                    <label>Name</label>
-                                    <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">
-                                    <p class="help-block text-danger"></p>
-                                </div>
+            </section>
+            <section>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-8 col-lg-offset-2 centered">
+                            <div class="col-lg-4">
+                                <img src="https://cloud.githubusercontent.com/assets/5823644/11061857/e36d1066-87a1-11e5-92b7-8480be35a0af.jpg" class="profile-picture">
                             </div>
-                            <div class="row control-group">
-                                <div class="form-group col-xs-12 floating-label-form-group controls">
-                                    <label>Email Address</label>
-                                    <input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
-                                    <p class="help-block text-danger"></p>
-                                </div>
+                            <div class="col-lg-8 profile-overview">
+                                <h3>Besnik Selimi</h3>
+                                <h3>Advisor</h3>
+                                <h5>PhD.</h5>
+                                <h5>Computer Software Engineering</h5>
+
+                                    <table class="table">
+                                        <tr>
+                                            <th>Current</td>
+                                            <td>SEE University</td>
+                                        </tr>
+                                        <tr>
+                                            <th>Previous</td>
+                                            <td>Laboratoire d'Informatique de Grenoble, SEE University</td>
+                                        </tr>
+                                        <tr>
+                                            <th>Education</td>
+                                            <td>Université Joseph Fourier (Grenoble I)</td>
+                                        </tr>
+                                        <tr>
+                                            <th>Websites</td>
+                                            <td>Personal Website, Company Website</td>
+                                        </tr>
+                                    </table>
                             </div>
-                            <div class="row control-group">
-                                <div class="form-group col-xs-12 floating-label-form-group controls">
-                                    <label>Phone Number</label>
-                                    <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Please enter your phone number.">
-                                    <p class="help-block text-danger"></p>
-                                </div>
+
+                        </div><!-- /col-lg-8 -->
+                    </div><!-- /row -->
+                </div> <!-- /container -->
+            </section>
+
+            <section>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-8 col-lg-offset-2 centered">
+                            <div class="col-lg-4">
+                                <img src="https://cloud.githubusercontent.com/assets/5823644/11061878/0fc0a48e-87a2-11e5-8009-334c4aa3b822.jpg" class="profile-picture">
                             </div>
-                            <div class="row control-group">
-                                <div class="form-group col-xs-12 floating-label-form-group controls">
-                                    <label>Message</label>
-                                    <textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
-                                    <p class="help-block text-danger"></p>
-                                </div>
+                            <div class="col-lg-8 profile-overview">
+                                <h3>Mexhid Ferati</h3>
+                                <h3>Advisor</h3>
+                                <h5>PhD.</h5>
+                                <h5>Postdoctoral Fellow at Oslo and Akershus </h5>
+                                <h5>University College of Applied Sciences</h5>
+
+                                    <table class="table">
+                                        <tr>
+                                            <th>Current</td>
+                                            <td>Oslo and Akershus University College of Applied Sciences, South East European University</td>
+                                        </tr>
+                                        <tr>
+                                            <th>Previous</td>
+                                            <td>Indiana University, a3m Computers, KFOR, US Military, Camp Bondsteelf</td>
+                                        </tr>
+                                        <tr>
+                                            <th>Education</td>
+                                            <td>Indiana University</td>
+                                        </tr>
+                                        <tr>
+                                            <th>Websites</td>
+                                            <td>Personal Website, Company Website</td>
+                                        </tr>
+                                    </table>
                             </div>
-                            <br>
-                            <div id="success"></div>
-                            <div class="row">
-                                <div class="form-group col-xs-12">
-                                    <button type="submit" class="btn btn-success btn-lg">Send</button>
-                                </div>
+
+                        </div><!-- /col-lg-8 -->
+                    </div><!-- /row -->
+                </div> <!-- /container -->
+            </section>
+
+            <section>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-8 col-lg-offset-2 centered">
+                            <div class="col-lg-4">
+                                <img src="http://skyhook.is/images/Dren.png" class="profile-picture">
                             </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </section>
+                            <div class="col-lg-6 profile-overview">
+                                <h3>Dren Kajmakci</h3>
+                                <h3>Developer</h3>
+                                <h5>MSc.</h5>
+
+                                    <table class="table">
+                                        <tr>
+                                            <th>Education</td>
+                                            <td>Linnaeus university, University of Iceland, SEE University</td>
+                                        </tr>
+                                        <tr>
+                                            <th>Websites</td>
+                                            <td>Personal Website, Company Website</td>
+                                        </tr>
+                                    </table>
+                            </div>
+
+                        </div><!-- /col-lg-8 -->
+                    </div><!-- /row -->
+                </div> <!-- /container -->
+            </section>
+        </div>
 
         <!-- Footer -->
+        <div class="col-sm-12 no-padding">
         <footer class="text-center">
             <div class="footer-above">
                 <div class="container">
@@ -311,6 +256,9 @@
                     </div>
                 </div>
             </div>
+
+            <div style="width: 100%; height: 200px;" id="map"></div>
+
             <div class="footer-below">
                 <div class="container">
                     <div class="row">
@@ -319,6 +267,7 @@
                 </div>
             </div>
         </footer>
+        </div>
 
         <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
         <div class="scroll-top page-scroll visible-xs visble-sm">
@@ -326,6 +275,7 @@
                 <i class="fa fa-chevron-up"></i>
             </a>
         </div>
+
     </div>
 
     <script src="js/modernizer/modernizr.js"></script>
@@ -338,27 +288,14 @@
     <script src="js/classie.js"></script>
     <script src="js/cbpAnimatedHeader.js"></script>
 
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
+    <script src="js/map.js"></script>
+
     <script src="js/jqBootstrapValidation.js"></script>
     <script src="js/contact_me.js"></script>
     <script src="js/drooids.js"></script>
+    <script src="js/main.js"></script>
 
-    <script type="text/javascript">
-    window.onload = function(e) {
-        setTimeout(function() {
-            document.getElementById('about').style.display = "block";
-            document.getElementById('loader').style.display = "none";
-        }, 2000);
-    }
-    var clicky_site_ids = clicky_site_ids || [];
-    clicky_site_ids.push(100886501);
-    (function() {
-      var s = document.createElement('script');
-      s.type = 'text/javascript';
-      s.async = true;
-      s.src = '//static.getclicky.com/js';
-      ( document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0] ).appendChild( s );
-    })();
-    </script>
     <noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/100886501ns.gif" /></p></noscript>
 
 </body>
