fix: index links on about page.

--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand uppercase black brand-white-logo animated fadeIn" href="index.html">Drooids</a>
+                    <a class="navbar-brand uppercase black brand-white-logo animated fadeIn" href="index.html?scrollTo=id_page_top">Drooids</a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
@@ -66,7 +66,7 @@
                             <a href="#page-top"></a>
                         </li>
                         <li class="page-scroll">
-                            <a href="index.html" class="black animated fadeIn">Home</a>
+                            <a href="index.html?scrollTo=id_page_top" class="black animated fadeIn">Home</a>
                         </li>
                         <li class="page-scroll">
                             <a href="index.html?scrollTo=id_contact" class="black">Contact</a>
@@ -193,7 +193,7 @@
                             <div class="col-lg-6 profile-overview">
                                 <h3>Dren Kajmakci</h3>
                                 <h3>Developer</h3>
-                                <h5>MSc.</h5>
+                                <h5>M.Sc.</h5>
 
                                     <table class="table">
                                         <tr>
