--- a/about.html
+++ b/about.html
@@ -111,7 +111,7 @@
                     <div class="row">
                         <div class="col-lg-8 col-lg-offset-2 centered">
                             <div class="col-lg-4">
-                                <img src="https://cloud.githubusercontent.com/assets/5823644/11061857/e36d1066-87a1-11e5-92b7-8480be35a0af.jpg" class="profile-picture">
+                                <img src="images/team/besnik.jpg" class="profile-picture">
                             </div>
                             <div class="col-lg-8 profile-overview">
                                 <h3>Besnik Selimi</h3>
@@ -134,7 +134,7 @@
                                         </tr>
                                         <tr>
                                             <th>Websites</td>
-                                            <td>Personal Website, Company Website</td>
+                                            <td><a href="http://www.seeu.edu.mk/en/~b.selimi">Personal Website</a></td>
                                         </tr>
                                     </table>
                             </div>
@@ -149,7 +149,7 @@
                     <div class="row">
                         <div class="col-lg-8 col-lg-offset-2 centered">
                             <div class="col-lg-4">
-                                <img src="https://cloud.githubusercontent.com/assets/5823644/11061878/0fc0a48e-87a2-11e5-8009-334c4aa3b822.jpg" class="profile-picture">
+                                <img src="images/team/mexhid.jpg" class="profile-picture">
                             </div>
                             <div class="col-lg-8 profile-overview">
                                 <h3>Mexhid Ferati</h3>
@@ -173,7 +173,7 @@
                                         </tr>
                                         <tr>
                                             <th>Websites</td>
-                                            <td>Personal Website, Company Website</td>
+                                            <td><a href="https://mexhidferati.wordpress.com/">Personal Website</a></td>
                                         </tr>
                                     </table>
                             </div>
@@ -188,7 +188,7 @@
                     <div class="row">
                         <div class="col-lg-8 col-lg-offset-2 centered">
                             <div class="col-lg-4">
-                                <img src="http://skyhook.is/images/Dren.png" class="profile-picture">
+                                <img src="images/team/Dren.png" class="profile-picture">
                             </div>
                             <div class="col-lg-6 profile-overview">
                                 <h3>Dren Kajmakci</h3>
@@ -200,10 +200,39 @@
                                             <th>Education</td>
                                             <td>Linnaeus university, University of Iceland, SEE University</td>
                                         </tr>
-                                        <tr>
+                                        <!-- <tr>
                                             <th>Websites</td>
                                             <td>Personal Website, Company Website</td>
+                                        </tr> -->
+                                    </table>
+                            </div>
+
+                        </div><!-- /col-lg-8 -->
+                    </div><!-- /row -->
+                </div> <!-- /container -->
+            </section>
+
+            <section>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-8 col-lg-offset-2 centered">
+                            <div class="col-lg-4">
+                                <img src="images/team/staff-placeholder-female.png" class="profile-picture">
+                            </div>
+                            <div class="col-lg-6 profile-overview">
+                                <h3>Erla Kajmakci</h3>
+                                <h3>Designer</h3>
+                                <h5>B.Sc.</h5>
+
+                                    <table class="table">
+                                        <tr>
+                                            <th>Education</td>
+                                            <td>University of Iceland</td>
                                         </tr>
+                                        <!-- <tr>
+                                            <th>Websites</td>
+                                            <td>Personal Website, Company Website</td>
+                                        </tr> -->
                                     </table>
                             </div>
 
