--- a/index.html
+++ b/index.html
@@ -281,6 +281,27 @@
                             <!-- a href="/blog/tao-of-hashicorp.html" class="cont-read">More about us<span class="light-caret-right small"></span></a -->
                     </div>
 
+                     <div class="item-carousel">
+                        <div class="container row transparent">
+                            <div class="col-lg-12 row">
+                                <div class="col-lg-3 case-study">
+                                  <h1 style="font-size:26px;">
+                                    <span class="case-study">Case Study</span>
+                                    WarWobble
+                                  </h1>
+                                  </div>
+                                  <div class="col-lg-7">
+                                      <p style="font-size:16px;">
+                                        Based on WarCraft II by Blizzard
+                                        <!-- br><a href="/portfolio/score-revolution">View case study →</a -->
+                                      </p>
+                                  </div>
+                            </div>
+                          </div>
+                        <img src="images/clients/client-7.png" alt="">
+                            <!-- a href="/blog/tao-of-hashicorp.html" class="cont-read">More about us<span class="light-caret-right small"></span></a -->
+                    </div>
+
                 </div>
             </div>
         </div>
